--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     {% endblock title %}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}" alt="Taskmate"></a>
+        <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/logo.PNG' %}" alt="Taskmate"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
