--- a/todolist_app/templates/about.html
+++ b/todolist_app/templates/about.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-
-<title>About</title>
-
+    <title>About Us - Taskmate</title>
 {% endblock title %}
 
 {% block content %}
-<div class = "container">
-    <h1>{{welcome_text}}</h1>
-</div>
-{% endblock %}
+    <div class="container">
+        <h1>{{ about_text }}</h1>
+    </div>
+{% endblock content %}
